--- a/maori.css
+++ b/maori.css
@@ -110,6 +110,18 @@ h2{
 font-size:30px;
 }
 
+
+#wrapper { z-index:1; position:absolute;}
+
+#content{
+-webkit-border-radius: 0 10px 10px 0;
+   -moz-border-radius: 0 10px 10px 0;
+        border-radius: 0 10px 10px 0;
+padding:15px;
+margin-top:50px;
+
+}
+
 footer{
 -webkit-border-radius: 10px 10px 0 0;
 	-moz-border-radius: 10px 10px 0 0;
